# BMN_Thermalization

./: .gitignore  Makefile.am  configure.ac  main.cpp
src/: conf.cpp  conf.hpp  gauge_fix.cpp  gauge_fix.hpp  jfix_finder.cpp  main.cpp  matr.cpp  matr.hpp  observables.cpp  observables.hpp  pert_edge.cpp  perturb.cpp  random.cpp  random.hpp  random_walk.cpp  relax.cpp  theory.cpp  theory.hpp  tools.cpp  tools.hpp  update.cpp  update.hpp
